--- a/build.gradle
+++ b/build.gradle
@@ -26,35 +26,21 @@ repositories {
 }
 
 ext {
-	openSamlVersion = "4.3.2"
+	openSamlVersion = "5.1.3"
 	lombokVersion = "1.18.36"
 }
 
 dependencies {
-	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+//	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation "org.springframework.boot:spring-boot-starter-web"
 	implementation "ch.qos.logback:logback-core:1.5.16"
 	implementation "ch.qos.logback:logback-classic:1.5.16"
 
-	implementation ("org.opensaml:opensaml-core:$openSamlVersion") {
-		version {
-			strictly("${openSamlVersion}")
-		}
-	}
-
-	implementation ("org.opensaml:opensaml-saml-api:$openSamlVersion") {
-		version {
-			strictly("${openSamlVersion}")
-		}
-	}
-
-	implementation ("org.opensaml:opensaml-saml-impl:$openSamlVersion") {
-		version {
-			strictly("${openSamlVersion}")
-		}
-	}
-	
+	implementation "org.opensaml:opensaml-core-api:$openSamlVersion"
+	implementation "org.opensaml:opensaml-saml-api:$openSamlVersion"
+	implementation "org.opensaml:opensaml-saml-impl:$openSamlVersion"
+	implementation "org.opensaml:opensaml-security-api:$openSamlVersion"
 	implementation "org.springframework.security:spring-security-saml2-service-provider:6.4.3"
 	implementation "com.coveo:saml-client:5.0.0"
 	runtimeOnly "org.postgresql:postgresql"
