--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id "java"
+	id "maven-publish"
 	id "org.springframework.boot" version "3.4.3"
 	id "io.spring.dependency-management" version "1.1.7"
 	id "org.sonarqube" version "6.0.1.5171"
@@ -10,7 +11,7 @@ plugins {
 }
 
 group = "stirling.software"
-version = "0.42.0"
+version = "0.1.0"
 
 java {
 	toolchain {
@@ -20,6 +21,7 @@ java {
 }
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 	maven { url = "https://build.shibboleth.net/maven/releases" }
 	maven { url = "https://maven.pkg.github.com/jcefmaven/jcefmaven" }
@@ -40,7 +42,7 @@ dependencies {
 	implementation "org.opensaml:opensaml-core-api:$openSamlVersion"
 	implementation "org.opensaml:opensaml-saml-api:$openSamlVersion"
 	implementation "org.opensaml:opensaml-saml-impl:$openSamlVersion"
-	implementation "org.opensaml:opensaml-security-api:$openSamlVersion"
+//	implementation "org.opensaml:opensaml-security-api:$openSamlVersion"
 	implementation "org.springframework.security:spring-security-saml2-service-provider:6.4.3"
 	implementation "com.coveo:saml-client:5.0.0"
 	runtimeOnly "org.postgresql:postgresql"
@@ -57,6 +59,17 @@ openApi {
 	apiDocsUrl = "http://localhost:8080/v1/api-docs"
 	outputDir = file("$projectDir")
 	outputFileName = "SwaggerDoc.json"
+}
+
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			from components.java
+			groupId = 'stirling.software'       // Adjust to match your package
+			artifactId = 'stirling-pdf-enterprise'
+			version = '0.1.0'
+		}
+	}
 }
 
 tasks.named("test") {
