--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
 	id "io.swagger.swaggerhub" version "1.3.2"
 	id "edu.sc.seis.launch4j" version "3.0.6"
 	id "com.github.jk1.dependency-license-report" version "2.9"
+	id "com.github.johnrengelman.shadow" version "8.1.1"
 }
 
 group = "stirling.software"
@@ -33,26 +34,37 @@ ext {
 }
 
 dependencies {
-//	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation "org.springframework.boot:spring-boot-starter-web"
 	implementation "ch.qos.logback:logback-core:1.5.16"
 	implementation "ch.qos.logback:logback-classic:1.5.16"
-
 	implementation "org.opensaml:opensaml-core-api:$openSamlVersion"
 	implementation "org.opensaml:opensaml-saml-api:$openSamlVersion"
 	implementation "org.opensaml:opensaml-saml-impl:$openSamlVersion"
-//	implementation "org.opensaml:opensaml-security-api:$openSamlVersion"
 	implementation "org.springframework.security:spring-security-saml2-service-provider:6.4.3"
 	implementation "com.coveo:saml-client:5.0.0"
 	runtimeOnly "org.postgresql:postgresql"
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+	implementation "stirling.software:stirling-pdf:0.43.1"
 
 	testRuntimeOnly "org.mockito:mockito-inline:5.2.0"
 	testImplementation "org.springframework.boot:spring-boot-starter-test"
 	testImplementation "org.springframework.security:spring-security-test"
 	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+}
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'stirling.software.spdf.enterprise.StirlingPdfEnterpriseApplication'
+	}
+	zip64 = true
+}
+
+shadowJar {
+	archiveClassifier.set("all")
+	zip64 = true
 }
 
 openApi {
@@ -65,7 +77,7 @@ publishing {
 	publications {
 		mavenJava(MavenPublication) {
 			from components.java
-			groupId = 'stirling.software'       // Adjust to match your package
+			groupId = 'stirling.software.enterprise'
 			artifactId = 'stirling-pdf-enterprise'
 			version = '0.1.0'
 		}
