--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,15 @@ plugins {
     id 'signing'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'com.diffplug.spotless' version '7.0.2'
-    id("com.gradleup.shadow") version "9.0.0-beta12"
+    id 'com.gradleup.shadow' version '9.0.0-beta12'
 }
 
 ext {
-    springBootVersion = "3.4.4"
-    lombokVersion = "1.18.38"
-    bouncycastleVersion = "1.80"
-    springSecuritySamlVersion = "6.4.4"
-    openSamlVersion = "4.3.2"
+    springBootVersion = '3.4.4'
+    lombokVersion = '1.18.38'
+    bouncycastleVersion = '1.80'
+    openSamlVersion = '4.3.2'
+    logbackVersion = '1.5.18'
 }
 
 group = 'stirling.software.SPDF'
@@ -26,59 +26,59 @@ java {
 
 repositories {
     mavenCentral()
-    maven { url = "https://build.shibboleth.net/maven/releases" }
+    maven { url = 'https://build.shibboleth.net/maven/releases' }
 }
 
 dependencyManagement {
     imports {
-        mavenBom("org.springframework.boot:spring-boot-dependencies:3.4.4")
+        mavenBom('org.springframework.boot:spring-boot-dependencies:3.4.4')
     }
 }
 
 // Exclude Tomcat and include Jetty
 configurations.all {
     exclude group: 'commons-logging', module: 'commons-logging'
-    exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
+    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
 }
 
 dependencies {
     compileOnly files("${projectDir}/Stirling-PDF-0.45.1.jar")
 
-    compileOnly "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
-    compileOnly "org.springframework.boot:spring-boot-starter-jetty:$springBootVersion"
-    implementation "org.springframework.session:spring-session-core:3.4.2"
+    compileOnly 'org.springframework.boot:spring-boot-starter-web'
+    compileOnly 'org.springframework.boot:spring-boot-starter-jetty'
+    implementation 'org.springframework.session:spring-session-core:3.4.2'
     implementation 'com.unboundid.product.scim2:scim2-sdk-client:2.3.5'
-    compileOnly "commons-io:commons-io:2.18.0"
-    compileOnly "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0"
+    compileOnly 'commons-io:commons-io:2.18.0'
+    compileOnly 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     compileOnly "org.bouncycastle:bcprov-jdk18on:$bouncycastleVersion"
     compileOnly "org.bouncycastle:bcpkix-jdk18on:$bouncycastleVersion"
-    compileOnly "com.bucket4j:bucket4j_jdk17-core:8.14.0"
+    compileOnly 'com.bucket4j:bucket4j_jdk17-core:8.14.0'
 
     // tmp for security bumps
-    compileOnly 'ch.qos.logback:logback-core:1.5.18'
-    compileOnly 'ch.qos.logback:logback-classic:1.5.18'
+    compileOnly "ch.qos.logback:logback-core:$logbackVersion"
+    compileOnly "ch.qos.logback:logback-classic:$logbackVersion"
 
     // Security
-    compileOnly("io.github.pixee:java-security-toolkit:1.2.1")
-    implementation "org.springframework.boot:spring-boot-starter-security:$springBootVersion"
-    implementation "org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.3.RELEASE"
-    implementation "org.springframework.security:spring-security-saml2-service-provider:$springSecuritySamlVersion"
+    compileOnly 'io.github.pixee:java-security-toolkit:1.2.1'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.3.RELEASE'
+    implementation 'org.springframework.security:spring-security-saml2-service-provider:6.4.4'
 
     // Metrics
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    compileOnly "io.micrometer:micrometer-core:1.14.5"
+    compileOnly 'io.micrometer:micrometer-core:1.14.5'
     compileOnly 'com.posthog.java:posthog:1.2.0'
     implementation 'io.micrometer:micrometer-registry-prometheus'
 
     // Database
-    implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
-    runtimeOnly "org.postgresql:postgresql:42.7.5"
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'org.postgresql:postgresql:42.7.5'
 
     // Don't upgrade h2database
-    runtimeOnly "com.h2database:h2:2.3.232"
+    runtimeOnly 'com.h2database:h2:2.3.232'
 
     // SSO
-    implementation "org.springframework.boot:spring-boot-starter-oauth2-client:$springBootVersion"
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     constraints {
         implementation "org.opensaml:opensaml-core:$openSamlVersion"
         implementation "org.opensaml:opensaml-saml-api:$openSamlVersion"
@@ -90,14 +90,14 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
 
     // Testing
-    testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.mockito:mockito-inline:5.2.0'
 }
 
 spotless {
     java {
-        googleJavaFormat("1.25.2").aosp().reorderImports(false)
-        importOrder("java", "javax", "org", "com", "net", "io", "jakarta", "lombok", "me", "stirling")
+        googleJavaFormat('1.25.2').aosp().reorderImports(false)
+        importOrder('java', 'javax', 'org', 'com', 'net', 'io', 'jakarta', 'lombok', 'me', 'stirling')
         toggleOffOn()
         trimTrailingWhitespace()
         leadingTabsToSpaces()
@@ -106,12 +106,12 @@ spotless {
 }
 
 tasks.withType(JavaCompile).configureEach {
-    options.encoding = "UTF-8"
-    dependsOn "spotlessApply"
+    options.encoding = 'UTF-8'
+    dependsOn 'spotlessApply'
 }
 
 compileJava {
-    options.compilerArgs << "-parameters"
+    options.compilerArgs << '-parameters'
 }
 
 test {
@@ -155,11 +155,11 @@ publishing {
     
     repositories {
         maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/Stirling-Tools/stirling-pdf-security")
+            name = 'GitHubPackages'
+            url = uri('https://maven.pkg.github.com/Stirling-Tools/stirling-pdf-security')
             credentials {
-                username = System.getenv("GITHUB_ACTOR")
-                password = System.getenv("GITHUB_TOKEN")
+                username = System.getenv('GITHUB_ACTOR')
+                password = System.getenv('GITHUB_TOKEN')
             }
         }
     }
@@ -171,12 +171,12 @@ tasks.shadowJar {
   
 // Optional: Sign artifacts if needed
 signing {
-    def signingKey = findProperty("signingKey")
-    def signingPassword = findProperty("signingPassword")
+    def signingKey = findProperty('signingKey')
+    def signingPassword = findProperty('signingPassword')
     useInMemoryPgpKeys(signingKey, signingPassword)
     sign publishing.publications.mavenJava
 }
 
 tasks.withType(Sign) {
-    onlyIf { project.hasProperty("signingKey") && project.hasProperty("signingPassword") }
+    onlyIf { project.hasProperty('signingKey') && project.hasProperty('signingPassword') }
 }
